objects/Account.object
<CustomObject>
    <fields>
        <fullName>AM_Backup_list__c</fullName>
        <label>AM Backup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexander Kuklin</fullName>
                </value>
                <value>
                    <fullName>Ali Mukherjee</fullName>
                </value>
                <value>
                    <fullName>Brenton Foretich</fullName>
                </value>
                <value>
                    <fullName>Chris Dankulich</fullName>
                </value>
                <value>
                    <fullName>Daniel Simon</fullName>
                </value>
                <value>
                    <fullName>Dhiren Belur</fullName>
                </value>
                <value>
                    <fullName>Jeshaune Jackson</fullName>
                </value>
                <value>
                    <fullName>Kapil Jain</fullName>
                </value>
                <value>
                    <fullName>Manasa Chandra</fullName>
                </value>
                <value>
                    <fullName>Maxim Schillebeeckx</fullName>
                </value>
                <value>
                    <fullName>Melissa Gebhardt</fullName>
                </value>
                <value>
                    <fullName>Nnamdi Ihuegbu</fullName>
                </value>
                <value>
                    <fullName>Shantanu	Mittal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alexandra Franovic</fullName>
                    <isActive>false</isActive>
                    <label>Alexandra Franovic</label>
                </value>
                <value>
                    <fullName>Jess	Riley</fullName>
                    <isActive>false</isActive>
                    <label>Jess	Riley</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMDAccounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Biz_Dev_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Owner_list__c</fullName>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>AM Owner-DEPR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexander Kuklin</fullName>
                </value>
                <value>
                    <fullName>Ali Mukherjee</fullName>
                </value>
                <value>
                    <fullName>Jeshaune Jackson</fullName>
                    <label>JeShaune Jackson</label>
                </value>
                <value>
                    <fullName>Manasa Chandra</fullName>
                </value>
                <value>
                    <fullName>Shantanu Mittal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alexandra Franovic</fullName>
                    <isActive>false</isActive>
                    <label>Alexandra Franovic</label>
                </value>
                <value>
                    <fullName>Aparna Upadhyay</fullName>
                    <isActive>false</isActive>
                    <label>Aparna Upadhyay</label>
                </value>
                <value>
                    <fullName>Brenton Foretich</fullName>
                    <isActive>false</isActive>
                    <label>Brenton Foretich</label>
                </value>
                <value>
                    <fullName>Chris Dankulich</fullName>
                    <isActive>false</isActive>
                    <label>Chris Dankulich</label>
                </value>
                <value>
                    <fullName>Daniel Simon</fullName>
                    <isActive>false</isActive>
                    <label>Daniel Simon</label>
                </value>
                <value>
                    <fullName>Dhiren Belur</fullName>
                    <isActive>false</isActive>
                    <label>Dhiren Belur</label>
                </value>
                <value>
                    <fullName>Jess	Riley</fullName>
                    <isActive>false</isActive>
                    <label>Jess	Riley</label>
                </value>
                <value>
                    <fullName>Kapil Jain</fullName>
                    <isActive>false</isActive>
                    <label>Kapil Jain</label>
                </value>
                <value>
                    <fullName>Maxim Schillebeeckx</fullName>
                    <isActive>false</isActive>
                    <label>Maxim Schillebeeckx</label>
                </value>
                <value>
                    <fullName>Melissa Gebhardt</fullName>
                    <isActive>false</isActive>
                    <label>Melissa Gebhardt</label>
                </value>
                <value>
                    <fullName>Nick Sloman</fullName>
                    <isActive>false</isActive>
                    <label>Nick Sloman</label>
                </value>
                <value>
                    <fullName>Nnamdi Ihuegbu</fullName>
                    <isActive>false</isActive>
                    <label>Nnamdi Ihuegbu</label>
                </value>
                <value>
                    <fullName>Nobuaki Seki</fullName>
                    <isActive>false</isActive>
                    <label>Nobuaki Seki</label>
                </value>
                <value>
                    <fullName>Peter Collins</fullName>
                    <isActive>false</isActive>
                    <label>Peter Collins</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Owner_s_Email__c</fullName>
        <formula>AM_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Owner&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Owners_Email__c</fullName>
        <label>AM Owners Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_Shipping_Contact__c</fullName>
        <description>Used to define a shipping contact&apos;s attention while fulfilling auto-replenishment orders.</description>
        <inlineHelpText>Used to define a shipping contact&apos;s attention while fulfilling auto-replenishment orders.</inlineHelpText>
        <label>AR Shipping Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial : ROW</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial : US</fullName>
                </value>
                <value>
                    <fullName>DirectBill : US</fullName>
                </value>
                <value>
                    <fullName>Distributors : ROW</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Clinical Utility</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - LUNAR</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Pharma</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Proficiency</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Promotional</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Quality Testing</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - ROW</fullName>
                </value>
                <value>
                    <fullName>Financial Indigent</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma : ROW</fullName>
                </value>
                <value>
                    <fullName>Pharma : US</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan No OOP</fullName>
                </value>
                <value>
                    <fullName>Research : ROW</fullName>
                </value>
                <value>
                    <fullName>Research : US</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Patient</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <description>Standard 3-letter code that is appended to all Project IDs for a given Biopharma company</description>
        <label>Account Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Counter__c</fullName>
        <description>This field is for reports in order to allow counting up the number of accounts.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <label>Account Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Integration_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, this account has a contact or affiliation that is part of the Account Integration Target program</inlineHelpText>
        <label>Account Integration Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_MSL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account MSL</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Must have User Profile &apos;GHI Medical Affairs&apos;</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GHI Medical Affairs</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force-MedAffairs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Next_Steps__c</fullName>
        <label>Account Next Steps</label>
        <length>1096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>CASESAFEID( Owner.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Recent_Progress__c</fullName>
        <label>Account Recent Progress</label>
        <length>1096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Sample_Total__c</fullName>
        <description>Uses DLRS to roll up the number of samples attributed to the account&apos;s child accounts</description>
        <inlineHelpText>Number of samples attributed to this account&apos;s child accounts</inlineHelpText>
        <label>Account Sample Total</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Sample_Totals_Last_6_Mos__c</fullName>
        <inlineHelpText># of samples from this account&apos;s child accounts received in the last 6 months</inlineHelpText>
        <label>Account Sample Totals Last 6 Mos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>CDx</fullName>
                    <isActive>false</isActive>
                    <label>CDx</label>
                </value>
                <value>
                    <fullName>Presented</fullName>
                    <isActive>false</isActive>
                    <label>Presented</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_To_Be_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account To Be Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Recipient</fullName>
                </value>
                <value>
                    <fullName>Big Pharma Tier 3</fullName>
                </value>
                <value>
                    <fullName>Big Pharma Top 15</fullName>
                </value>
                <value>
                    <fullName>Big Pharma Top 30</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Clinical Account  International</fullName>
                </value>
                <value>
                    <fullName>Clinical Account US</fullName>
                    <default>true</default>
                    <label>Clinical Account US</label>
                </value>
                <value>
                    <fullName>Clinical Trial Account</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial Account International</fullName>
                </value>
                <value>
                    <fullName>CROs</fullName>
                </value>
                <value>
                    <fullName>Distributor International</fullName>
                </value>
                <value>
                    <fullName>Distributor US</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Patient Advocacy Group</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Account International</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Account US</fullName>
                </value>
                <value>
                    <fullName>Research Account International</fullName>
                </value>
                <value>
                    <fullName>Research Account US</fullName>
                </value>
                <value>
                    <fullName>Reseller International</fullName>
                </value>
                <value>
                    <fullName>Reseller US</fullName>
                </value>
                <value>
                    <fullName>GH Headquarters</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Pharma VIP</fullName>
                </value>
                <value>
                    <fullName>Big Pharma</fullName>
                    <label>Big Biopharma</label>
                </value>
                <value>
                    <fullName>Small Pharma</fullName>
                    <label>Small Biopharma</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <displayFormat>GHI-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Acct_Name_and_Number__c</fullName>
        <description>Used for some reports.</description>
        <formula>Name +&quot; (&quot;+  Account__c+&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Name and Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Kits_Site__c</fullName>
        <label>Actual Kits @ Site</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_TRF_Info__c</fullName>
        <description>This field captures information which is to be printed on TRF&apos;s along with Protocol #&apos;s for Study Sites.</description>
        <label>Additional TRF Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Date__c</fullName>
        <label>Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Backup_list__c</fullName>
        <label>BD Backup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brenton Foretich</fullName>
                </value>
                <value>
                    <fullName>Chris Dankulich</fullName>
                </value>
                <value>
                    <fullName>Daniel Simon</fullName>
                </value>
                <value>
                    <fullName>Dhiren Belur</fullName>
                </value>
                <value>
                    <fullName>Iris Faull</fullName>
                </value>
                <value>
                    <fullName>Jeshaune Jackson</fullName>
                </value>
                <value>
                    <fullName>Kapil Jain</fullName>
                </value>
                <value>
                    <fullName>Manasa Chandra</fullName>
                </value>
                <value>
                    <fullName>Maxim Schillebeeckx</fullName>
                </value>
                <value>
                    <fullName>Melissa Gebhardt</fullName>
                </value>
                <value>
                    <fullName>Nnamdi Ihuegbu</fullName>
                </value>
                <value>
                    <fullName>Shantanu	Mittal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alexandra Franovic</fullName>
                    <isActive>false</isActive>
                    <label>Alexandra Franovic</label>
                </value>
                <value>
                    <fullName>Jess	Riley</fullName>
                    <isActive>false</isActive>
                    <label>Jess	Riley</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BD Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDAccounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BD Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Owner_list__c</fullName>
        <label>BD Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aparna Upadhyay</fullName>
                </value>
                <value>
                    <fullName>Chris Dankulich</fullName>
                </value>
                <value>
                    <fullName>Daniel Simon</fullName>
                </value>
                <value>
                    <fullName>Dhiren Belur</fullName>
                </value>
                <value>
                    <fullName>Nick Sloman</fullName>
                </value>
                <value>
                    <fullName>Nnamdi Ihuegbu</fullName>
                </value>
                <value>
                    <fullName>Nobuaki Seki</fullName>
                </value>
                <value>
                    <fullName>Peter Collins</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alexandra Franovic</fullName>
                    <isActive>false</isActive>
                    <label>Alexandra Franovic</label>
                </value>
                <value>
                    <fullName>Brenton Foretich</fullName>
                    <isActive>false</isActive>
                    <label>Brenton Foretich</label>
                </value>
                <value>
                    <fullName>Jeshaune Jackson</fullName>
                    <isActive>false</isActive>
                    <label>Jeshaune Jackson</label>
                </value>
                <value>
                    <fullName>Jess	Riley</fullName>
                    <isActive>false</isActive>
                    <label>Jess	Riley</label>
                </value>
                <value>
                    <fullName>Kapil Jain</fullName>
                    <isActive>false</isActive>
                    <label>Kapil Jain</label>
                </value>
                <value>
                    <fullName>Manasa Chandra</fullName>
                    <isActive>false</isActive>
                    <label>Manasa Chandra</label>
                </value>
                <value>
                    <fullName>Maxim Schillebeeckx</fullName>
                    <isActive>false</isActive>
                    <label>Maxim Schillebeeckx</label>
                </value>
                <value>
                    <fullName>Melissa Gebhardt</fullName>
                    <isActive>false</isActive>
                    <label>Melissa Gebhardt</label>
                </value>
                <value>
                    <fullName>Shantanu	Mittal</fullName>
                    <isActive>false</isActive>
                    <label>Shantanu	Mittal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Owners_Email__c</fullName>
        <label>BD Owners Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BI_Owner__c</fullName>
        <label>BI Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allysia Mak</fullName>
                </value>
                <value>
                    <fullName>Arielle Yablonovitch</fullName>
                </value>
                <value>
                    <fullName>Elena Helman</fullName>
                </value>
                <value>
                    <fullName>Jennifer Yen</fullName>
                </value>
                <value>
                    <fullName>Katie Quinn</fullName>
                </value>
                <value>
                    <fullName>Kyle Chang</fullName>
                </value>
                <value>
                    <fullName>Ohad Manor</fullName>
                </value>
                <value>
                    <fullName>Pooja Sreedhar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BP_Account_Status__c</fullName>
        <label>Account StatusD</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Signed Partner</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CDx</fullName>
                    <isActive>false</isActive>
                    <label>CDx</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <isActive>false</isActive>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <isActive>false</isActive>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Presented</fullName>
                    <isActive>false</isActive>
                    <label>Presented</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_First__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to track accounts involved with certain clinical trials.</description>
        <inlineHelpText>Director of Clinical Trial Operations uses this to track certain accounts.</inlineHelpText>
        <label>B First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <label>Billing Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <label>Billing Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Suspense_Flag__c</fullName>
        <label>Billing Suspense Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bio_Bank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked means samples for this account are stored and not processed immediately. When checked, delayed-report cases will not be generated for samples for this account.</inlineHelpText>
        <label>Bio-Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biopharma_OK_to_Send_to_LIMS__c</fullName>
        <formula>OR( 
AND 
(RecordType.Id=&apos;01234000000HoYe&apos;, 
ISBLANK(Sent_to_LIMS__c), 
BillingCountry&lt;&gt;&apos;US&apos;, 
NOT(ISBLANK(Phone)), 
NOT(ISBLANK(BillingStreet)), 
NOT(ISBLANK(BillingCity)), 
NOT(ISBLANK(BillingCountry))), 
AND 
(RecordType.Id=&apos;01234000000HoYe&apos;, 
ISBLANK(Sent_to_LIMS__c), 
BillingCountry=&apos;US&apos;, 
NOT(ISBLANK(Phone)), 
NOT(ISBLANK(BillingStreet)), 
NOT(ISBLANK(BillingCity)), 
NOT(ISBLANK(BillingCountry)), 
NOT(ISBLANK(BillingState)), 
NOT(ISBLANK(BillingPostalCode))) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Biopharma OK to Send to LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDA_Expiration_Date__c</fullName>
        <label>CDA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDA_Name__c</fullName>
        <label>CDA Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDA_Start_Date__c</fullName>
        <label>CDA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDA_Status__c</fullName>
        <label>CDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Guardant Review</fullName>
                </value>
                <value>
                    <fullName>Customer Execution</fullName>
                </value>
                <value>
                    <fullName>Guardant Execution</fullName>
                </value>
                <value>
                    <fullName>Fully Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDA_Three_month_Date__c</fullName>
        <formula>CDA_Expiration_Date__c-90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Three months before the Expiration Date</inlineHelpText>
        <label>CDA Three-month Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Owner__c</fullName>
        <label>CD Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Madison Gay</fullName>
                </value>
                <value>
                    <fullName>Ariana Schulman</fullName>
                    <label>Ariana Shulman</label>
                </value>
                <value>
                    <fullName>Hannah Neville</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Account_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearinghouse_ID__c</fullName>
        <label>Clearinghouse ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Type__c</fullName>
        <description>General Practice = 1-4 locations
Large Group Practice more than 5 locations</description>
        <inlineHelpText>General Practice = 1-4 locations
Large Group Practice &gt; 5 locations</inlineHelpText>
        <label>Community Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Large Group Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conceirge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierge</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>